@@ -1,3 +1,12 @@
+2023-08-22  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Fix assigning values to
+	any[] arrays.
+	* libpoke/pvm-val.c (pvm_type_equal_p): Handle null[] types
+	properly.
+	* testsuite/poke.pkl/ass-22.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2023-08-20  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* NEWS: Add entries for poke 3.3.
